fix z-index for slider

--- a/src/app/filters/filter-view/filter-view.component.css
+++ b/src/app/filters/filter-view/filter-view.component.css
@@ -1,5 +1,3 @@
-
-
 .margin-top {
   margin-top: 8px;
 }
@@ -27,4 +25,8 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #69f0ae;
+}
+
+:host ::ng-deep .p-slider .p-slider-handle.p-slider-handle-active {
+  z-index: 2;
 }
